Moved all modules to de.spraener.projxp as root package.